--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,14 @@
 Package: Rchemcpp
 Type: Package
 Title: Similarity measures for chemical compounds
-Version: 2.1.3
+Version: 2.1.4
 Date: 2013-11-05
 Author: Michael Mahr, Guenter Klambauer
 Maintainer: Guenter Klambauer <klambauer@bioinf.jku.at>
-Description: The Rchemcpp package implements the marginalized graph kernel and
-    extensions, Tanimoto kernels, graph kernels, pharmacophore and 3D kernels
-    suggested for measuring the similarity of molecules.
-biocViews: Bioinformatics, CellBasedAssays, Clustering, DataImport,
-        Infrastructure, MicrotitrePlateAssay, Proteomics, Software,
-        Visualization
+Description: The Rchemcpp package implements the marginalized graph
+        kernel and extensions, Tanimoto kernels, graph kernels,
+        pharmacophore and 3D kernels suggested for measuring the
+        similarity of molecules.
 License: GPL (>= 2.1)
 URL: http://www.bioinf.jku.at/software/Rchemcpp
 Depends: Rcpp (>= 0.9.13), R (>= 2.15.0), methods, ChemmineR
@@ -21,3 +19,5 @@ RcppModules: Rmolecule, Rmoleculeset, Relements, spectrumhelper,
 Collate: 'getMoleculeNamesFromSDF.R' 'sd2gram3Dpharma.R'
         'sd2gram3Dspectrum.R' 'sd2gram.R' 'sd2gramSpectrum.R'
         'sd2gramSubtree.R' 'utility.R' 'zzz.R' 'roxygen.R' 'methods.R'
+biocViews: CellBasedAssays, Clustering, DataImport, Infrastructure,
+        MicrotitrePlateAssay, Proteomics, Software, Visualization
