--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: Rchemcpp
 Type: Package
 Title: Similarity measures for chemical compounds
-Version: 2.5.0
-Date: 2013-17-11
+Version: 2.5.1
+Date: 2015-04-01
 Author: Michael Mahr, Guenter Klambauer
 Maintainer: Guenter Klambauer <klambauer@bioinf.jku.at>
 Description: The Rchemcpp package implements the marginalized graph
@@ -18,6 +18,7 @@ Depends: R (>= 2.15.0)
 Imports: Rcpp (>= 0.11.1), methods, ChemmineR
 Suggests: apcluster, kernlab
 LinkingTo: Rcpp
+SystemRequirements: GNU make
 RcppModules: Rmolecule, Rmoleculeset, Relements, spectrumhelper,
         spectrum3Dhelper, subtreehelper
 Collate: 'getMoleculeNamesFromSDF.R' 'sd2gram3Dpharma.R'
